Final2/obj/Debug/net6.0/DocumentSpecParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Jorge\source\repos\Final2\Final2\Content\DocumentSpec.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Final2.Content {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class DocumentSpecParser : Parser {
	public const int
		BOLD=1, ITALIC=2, UNDERLINE=3, TITLE=4, TITEND=5, CORCHETE=6, CORCHETEFINAL=7, 
		LLAVE=8, LLAVEFINAL=9, COMA=10, HYPHEN=11, HEADING1=12, HEADING2=13, HEADING3=14, 
		TEXT=15, WORD=16, WS=17;
	public const int
		RULE_document = 0, RULE_text = 1, RULE_boldText = 2, RULE_bold = 3, RULE_italicText = 4, 
		RULE_italic = 5, RULE_underlineText = 6, RULE_underline = 7, RULE_title = 8, 
		RULE_heading1 = 9, RULE_heading2 = 10, RULE_heading3 = 11, RULE_nested = 12, 
		RULE_list_item = 13, RULE_list_number = 14;
	public static readonly string[] ruleNames = {
		"document", "text", "boldText", "bold", "italicText", "italic", "underlineText", 
		"underline", "title", "heading1", "heading2", "heading3", "nested", "list_item", 
		"list_number"
	};

	private static readonly string[] _LiteralNames = {
		null, "'$'", "'~'", "'++'", "'>'", "'<'", "'['", "']'", "'{'", "'}'", 
		"','", "'-'", "'^'", "'^^'", "'^^^'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BOLD", "ITALIC", "UNDERLINE", "TITLE", "TITEND", "CORCHETE", "CORCHETEFINAL", 
		"LLAVE", "LLAVEFINAL", "COMA", "HYPHEN", "HEADING1", "HEADING2", "HEADING3", 
		"TEXT", "WORD", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DocumentSpec.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public DocumentSpecParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class DocumentContext : ParserRuleContext {
		public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public List_itemContext[] list_item() {
			return GetRuleContexts<List_itemContext>();
		}
		public List_itemContext list_item(int i) {
			return GetRuleContext<List_itemContext>(i);
		}
		public List_numberContext[] list_number() {
			return GetRuleContexts<List_numberContext>();
		}
		public List_numberContext list_number(int i) {
			return GetRuleContext<List_numberContext>(i);
		}
		public BoldContext[] bold() {
			return GetRuleContexts<BoldContext>();
		}
		public BoldContext bold(int i) {
			return GetRuleContext<BoldContext>(i);
		}
		public ItalicContext[] italic() {
			return GetRuleContexts<ItalicContext>();
		}
		public ItalicContext italic(int i) {
			return GetRuleContext<ItalicContext>(i);
		}
		public UnderlineContext[] underline() {
			return GetRuleContexts<UnderlineContext>();
		}
		public UnderlineContext underline(int i) {
			return GetRuleContext<UnderlineContext>(i);
		}
		public TitleContext[] title() {
			return GetRuleContexts<TitleContext>();
		}
		public TitleContext title(int i) {
			return GetRuleContext<TitleContext>(i);
		}
		public Heading1Context[] heading1() {
			return GetRuleContexts<Heading1Context>();
		}
		public Heading1Context heading1(int i) {
			return GetRuleContext<Heading1Context>(i);
		}
		public Heading2Context[] heading2() {
			return GetRuleContexts<Heading2Context>();
		}
		public Heading2Context heading2(int i) {
			return GetRuleContext<Heading2Context>(i);
		}
		public Heading3Context[] heading3() {
			return GetRuleContexts<Heading3Context>();
		}
		public Heading3Context heading3(int i) {
			return GetRuleContext<Heading3Context>(i);
		}
		public NestedContext[] nested() {
			return GetRuleContexts<NestedContext>();
		}
		public NestedContext nested(int i) {
			return GetRuleContext<NestedContext>(i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterDocument(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitDocument(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				State = 41;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					State = 30; text();
					}
					break;

				case 2:
					{
					State = 31; list_item();
					}
					break;

				case 3:
					{
					State = 32; list_number();
					}
					break;

				case 4:
					{
					State = 33; bold();
					}
					break;

				case 5:
					{
					State = 34; italic();
					}
					break;

				case 6:
					{
					State = 35; underline();
					}
					break;

				case 7:
					{
					State = 36; title();
					}
					break;

				case 8:
					{
					State = 37; heading1();
					}
					break;

				case 9:
					{
					State = 38; heading2();
					}
					break;

				case 10:
					{
					State = 39; heading3();
					}
					break;

				case 11:
					{
					State = 40; nested();
					}
					break;
				}
				}
				State = 43;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOLD) | (1L << ITALIC) | (1L << UNDERLINE) | (1L << TITLE) | (1L << CORCHETE) | (1L << LLAVE) | (1L << HEADING1) | (1L << HEADING2) | (1L << HEADING3) | (1L << TEXT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TextContext : ParserRuleContext {
		public ITerminalNode TEXT() { return GetToken(DocumentSpecParser.TEXT, 0); }
		public TextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_text; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitText(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TextContext text() {
		TextContext _localctx = new TextContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_text);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45; Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoldTextContext : ParserRuleContext {
		public ITerminalNode[] BOLD() { return GetTokens(DocumentSpecParser.BOLD); }
		public ITerminalNode BOLD(int i) {
			return GetToken(DocumentSpecParser.BOLD, i);
		}
		public ITerminalNode TEXT() { return GetToken(DocumentSpecParser.TEXT, 0); }
		public BoldTextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_boldText; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterBoldText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitBoldText(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoldText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BoldTextContext boldText() {
		BoldTextContext _localctx = new BoldTextContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_boldText);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; Match(BOLD);
			State = 48; Match(TEXT);
			State = 49; Match(BOLD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BoldContext : ParserRuleContext {
		public BoldTextContext boldText() {
			return GetRuleContext<BoldTextContext>(0);
		}
		public ITerminalNode[] BOLD() { return GetTokens(DocumentSpecParser.BOLD); }
		public ITerminalNode BOLD(int i) {
			return GetToken(DocumentSpecParser.BOLD, i);
		}
		public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public ItalicContext[] italic() {
			return GetRuleContexts<ItalicContext>();
		}
		public ItalicContext italic(int i) {
			return GetRuleContext<ItalicContext>(i);
		}
		public UnderlineContext[] underline() {
			return GetRuleContexts<UnderlineContext>();
		}
		public UnderlineContext underline(int i) {
			return GetRuleContext<UnderlineContext>(i);
		}
		public TitleContext[] title() {
			return GetRuleContexts<TitleContext>();
		}
		public TitleContext title(int i) {
			return GetRuleContext<TitleContext>(i);
		}
		public Heading1Context[] heading1() {
			return GetRuleContexts<Heading1Context>();
		}
		public Heading1Context heading1(int i) {
			return GetRuleContext<Heading1Context>(i);
		}
		public Heading2Context[] heading2() {
			return GetRuleContexts<Heading2Context>();
		}
		public Heading2Context heading2(int i) {
			return GetRuleContext<Heading2Context>(i);
		}
		public Heading3Context[] heading3() {
			return GetRuleContexts<Heading3Context>();
		}
		public Heading3Context heading3(int i) {
			return GetRuleContext<Heading3Context>(i);
		}
		public NestedContext[] nested() {
			return GetRuleContexts<NestedContext>();
		}
		public NestedContext nested(int i) {
			return GetRuleContext<NestedContext>(i);
		}
		public BoldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bold; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterBold(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitBold(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBold(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BoldContext bold() {
		BoldContext _localctx = new BoldContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_bold);
		try {
			int _alt;
			State = 67;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 51; boldText();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 52; Match(BOLD);
				State = 61;
				_errHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						State = 61;
						_errHandler.Sync(this);
						switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
						case 1:
							{
							State = 53; text();
							}
							break;

						case 2:
							{
							State = 54; italic();
							}
							break;

						case 3:
							{
							State = 55; underline();
							}
							break;

						case 4:
							{
							State = 56; title();
							}
							break;

						case 5:
							{
							State = 57; heading1();
							}
							break;

						case 6:
							{
							State = 58; heading2();
							}
							break;

						case 7:
							{
							State = 59; heading3();
							}
							break;

						case 8:
							{
							State = 60; nested();
							}
							break;
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 63;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
				State = 65; Match(BOLD);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItalicTextContext : ParserRuleContext {
		public ITerminalNode[] ITALIC() { return GetTokens(DocumentSpecParser.ITALIC); }
		public ITerminalNode ITALIC(int i) {
			return GetToken(DocumentSpecParser.ITALIC, i);
		}
		public ITerminalNode TEXT() { return GetToken(DocumentSpecParser.TEXT, 0); }
		public ItalicTextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_italicText; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterItalicText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitItalicText(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItalicText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItalicTextContext italicText() {
		ItalicTextContext _localctx = new ItalicTextContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_italicText);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(ITALIC);
			State = 70; Match(TEXT);
			State = 71; Match(ITALIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItalicContext : ParserRuleContext {
		public ItalicTextContext italicText() {
			return GetRuleContext<ItalicTextContext>(0);
		}
		public ITerminalNode[] ITALIC() { return GetTokens(DocumentSpecParser.ITALIC); }
		public ITerminalNode ITALIC(int i) {
			return GetToken(DocumentSpecParser.ITALIC, i);
		}
		public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public BoldContext[] bold() {
			return GetRuleContexts<BoldContext>();
		}
		public BoldContext bold(int i) {
			return GetRuleContext<BoldContext>(i);
		}
		public UnderlineContext[] underline() {
			return GetRuleContexts<UnderlineContext>();
		}
		public UnderlineContext underline(int i) {
			return GetRuleContext<UnderlineContext>(i);
		}
		public TitleContext[] title() {
			return GetRuleContexts<TitleContext>();
		}
		public TitleContext title(int i) {
			return GetRuleContext<TitleContext>(i);
		}
		public Heading1Context[] heading1() {
			return GetRuleContexts<Heading1Context>();
		}
		public Heading1Context heading1(int i) {
			return GetRuleContext<Heading1Context>(i);
		}
		public Heading2Context[] heading2() {
			return GetRuleContexts<Heading2Context>();
		}
		public Heading2Context heading2(int i) {
			return GetRuleContext<Heading2Context>(i);
		}
		public Heading3Context[] heading3() {
			return GetRuleContexts<Heading3Context>();
		}
		public Heading3Context heading3(int i) {
			return GetRuleContext<Heading3Context>(i);
		}
		public NestedContext[] nested() {
			return GetRuleContexts<NestedContext>();
		}
		public NestedContext nested(int i) {
			return GetRuleContext<NestedContext>(i);
		}
		public ItalicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_italic; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterItalic(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitItalic(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitItalic(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ItalicContext italic() {
		ItalicContext _localctx = new ItalicContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_italic);
		try {
			int _alt;
			State = 89;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 73; italicText();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 74; Match(ITALIC);
				State = 83;
				_errHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						State = 83;
						_errHandler.Sync(this);
						switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
						case 1:
							{
							State = 75; text();
							}
							break;

						case 2:
							{
							State = 76; bold();
							}
							break;

						case 3:
							{
							State = 77; underline();
							}
							break;

						case 4:
							{
							State = 78; title();
							}
							break;

						case 5:
							{
							State = 79; heading1();
							}
							break;

						case 6:
							{
							State = 80; heading2();
							}
							break;

						case 7:
							{
							State = 81; heading3();
							}
							break;

						case 8:
							{
							State = 82; nested();
							}
							break;
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 85;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
				State = 87; Match(ITALIC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnderlineTextContext : ParserRuleContext {
		public ITerminalNode[] UNDERLINE() { return GetTokens(DocumentSpecParser.UNDERLINE); }
		public ITerminalNode UNDERLINE(int i) {
			return GetToken(DocumentSpecParser.UNDERLINE, i);
		}
		public ITerminalNode TEXT() { return GetToken(DocumentSpecParser.TEXT, 0); }
		public UnderlineTextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_underlineText; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterUnderlineText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitUnderlineText(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnderlineText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnderlineTextContext underlineText() {
		UnderlineTextContext _localctx = new UnderlineTextContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_underlineText);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91; Match(UNDERLINE);
			State = 92; Match(TEXT);
			State = 93; Match(UNDERLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnderlineContext : ParserRuleContext {
		public UnderlineTextContext underlineText() {
			return GetRuleContext<UnderlineTextContext>(0);
		}
		public ITerminalNode[] UNDERLINE() { return GetTokens(DocumentSpecParser.UNDERLINE); }
		public ITerminalNode UNDERLINE(int i) {
			return GetToken(DocumentSpecParser.UNDERLINE, i);
		}
		public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public BoldContext[] bold() {
			return GetRuleContexts<BoldContext>();
		}
		public BoldContext bold(int i) {
			return GetRuleContext<BoldContext>(i);
		}
		public ItalicContext[] italic() {
			return GetRuleContexts<ItalicContext>();
		}
		public ItalicContext italic(int i) {
			return GetRuleContext<ItalicContext>(i);
		}
		public TitleContext[] title() {
			return GetRuleContexts<TitleContext>();
		}
		public TitleContext title(int i) {
			return GetRuleContext<TitleContext>(i);
		}
		public Heading1Context[] heading1() {
			return GetRuleContexts<Heading1Context>();
		}
		public Heading1Context heading1(int i) {
			return GetRuleContext<Heading1Context>(i);
		}
		public Heading2Context[] heading2() {
			return GetRuleContexts<Heading2Context>();
		}
		public Heading2Context heading2(int i) {
			return GetRuleContext<Heading2Context>(i);
		}
		public Heading3Context[] heading3() {
			return GetRuleContexts<Heading3Context>();
		}
		public Heading3Context heading3(int i) {
			return GetRuleContext<Heading3Context>(i);
		}
		public NestedContext[] nested() {
			return GetRuleContexts<NestedContext>();
		}
		public NestedContext nested(int i) {
			return GetRuleContext<NestedContext>(i);
		}
		public UnderlineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_underline; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterUnderline(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitUnderline(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnderline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnderlineContext underline() {
		UnderlineContext _localctx = new UnderlineContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_underline);
		try {
			int _alt;
			State = 111;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95; underlineText();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96; Match(UNDERLINE);
				State = 105;
				_errHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						State = 105;
						_errHandler.Sync(this);
						switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
						case 1:
							{
							State = 97; text();
							}
							break;

						case 2:
							{
							State = 98; bold();
							}
							break;

						case 3:
							{
							State = 99; italic();
							}
							break;

						case 4:
							{
							State = 100; title();
							}
							break;

						case 5:
							{
							State = 101; heading1();
							}
							break;

						case 6:
							{
							State = 102; heading2();
							}
							break;

						case 7:
							{
							State = 103; heading3();
							}
							break;

						case 8:
							{
							State = 104; nested();
							}
							break;
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 107;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
				State = 109; Match(UNDERLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TitleContext : ParserRuleContext {
		public ITerminalNode TITLE() { return GetToken(DocumentSpecParser.TITLE, 0); }
		public ITerminalNode TEXT() { return GetToken(DocumentSpecParser.TEXT, 0); }
		public ITerminalNode TITEND() { return GetToken(DocumentSpecParser.TITEND, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_title; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterTitle(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitTitle(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTitle(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TitleContext title() {
		TitleContext _localctx = new TitleContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_title);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(TITLE);
			State = 114; Match(TEXT);
			State = 115; Match(TITEND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Heading1Context : ParserRuleContext {
		public ITerminalNode HEADING1() { return GetToken(DocumentSpecParser.HEADING1, 0); }
		public ITerminalNode TEXT() { return GetToken(DocumentSpecParser.TEXT, 0); }
		public Heading1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading1; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.EnterHeading1(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDocumentSpecListener typedListener = listener as IDocumentSpecListener;
			if (typedListener != null) typedListener.ExitHeading1(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDocumentSpecVisitor<TResult> typedVisitor = visitor as IDocumentSpecVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading1(this);
			else return visitor.VisitChildren(this);
		}
	}
